<resources>
    <string name="app_name">SporTeam</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_group">+ Add Group</string>
    <string name="help">Help</string>
    <string name="register">Register</string>
    <string name="personal">Personal</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="group_name">Group Name:</string>
    <string name="title_activity_group_details">Group Details</string>
    <string name="title_activity_register">Registration</string>
    <string name="dialog_message">
SporTeam allows\n
•	Each user,\n
•	At any place on the globe,\n
•	And any time of the day\n
To create, or find a group for sports and join it.\n
\n
Each user can search a group according to:\n
•	Favorite sport,\n
•	Location,\n
•	Physical condition,\n
•	Availability of free time\n
\n
Lets go to your next activity!!!\n
    </string>
    <string name="dialog_title">SporTeam - Lets go!!!</string>
    <string name="ok">OK</string>
</resources>
